<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="@dimen/pad_15dp"
            android:paddingRight="@dimen/pad_15dp"
            android:paddingTop="@dimen/pad_20dp" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo_login" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/pad_15dp"
                android:orientation="horizontal" 
                android:visibility="gone">

                <Button
                    android:id="@+id/btnTw"
                    style="@style/btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_tw" />

                <Button
                    android:id="@+id/btnFb"
                    style="@style/btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/pad_10dp"
                    android:background="@drawable/btn_fb" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/pad_5dp"
                android:layout_marginTop="@dimen/pad_10dp"
                android:text="@string/signin"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_16sp" />

            <EditText
                android:id="@+id/username"
                style="@style/editext_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_username"
                android:hint="@string/username" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/password"
                style="@style/editext_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/pad_5dp"
                android:drawableRight="@drawable/ic_pwd"
                android:hint="@string/password"
                android:inputType="textPassword" >
            </EditText>

            <LinearLayout
                android:id="@+id/a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/pad_10dp"
                android:gravity="bottom" >

                <CheckBox
                    android:id="@+id/checkBox1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/keep_me_signin"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txt_14sp"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/btnLogin"
                    style="@style/btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_login" />
            </LinearLayout>

            <Button
                android:id="@+id/btnForgot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:gravity="right"
                android:padding="@dimen/pad_5dp"
                android:text="@string/forgot_my_pwd"
                android:textColor="@color/main_color_gray_dk"
                android:textSize="@dimen/txt_14sp"
                android:visibility="invisible" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/btnReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/reg_bg"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/pad_3dp"
            android:text="@string/no_account"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_14sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_now"
            android:textColor="@color/main_color_gray"
            android:textSize="@dimen/txt_14sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>