<android.support.v4.widget.DrawerLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_smoke" >
    

    <LinearLayout
        android:id="@+id/mainv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_color_gray_dk1"
        android:orientation="horizontal" >

         <Button
            android:id="@+id/chatter"
            style="@style/tab_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="true"
            android:text="@string/chatter" />
         

        <View
            android:id="@+id/view0"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/pad_10dp"
            android:layout_marginTop="@dimen/pad_10dp"
            android:background="@color/main_color_gray_lt" />

       <Button
            android:id="@+id/recipes"
            style="@style/tab_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="true"
            android:text="@string/recipes" />
       
        <View
            android:id="@+id/view1"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/pad_10dp"
            android:layout_marginTop="@dimen/pad_10dp"
            android:background="@color/main_color_gray_lt" />

        <Button
            android:id="@+id/music"
            style="@style/tab_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="true"
            android:text="@string/music" />
        
        <View
            android:id="@+id/view2"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/pad_10dp"
            android:layout_marginTop="@dimen/pad_10dp"
            android:background="@color/main_color_gray_lt" />
        
    </LinearLayout>
        <FrameLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/left"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white_smoke"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/left_drawer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:choiceMode="singleChoice"
            android:divider="@color/gray_light"
            android:dividerHeight="@dimen/divider" />

        <Button
            android:id="@+id/logout"
            style="@style/btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_color_gray"
            android:drawableLeft="@drawable/ic_logout"
            android:drawablePadding="@dimen/pad_10dp"
            android:gravity="left|center_vertical"
            android:padding="@dimen/pad_10dp"
            android:text="@string/signout"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_16sp" />
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>
