<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sc"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/pad_10dp" >

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="none" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/image1"
                    android:layout_width="235dp"
                    android:layout_height="187dp"
                    android:layout_weight="3.38"
                    android:scaleType="fitCenter"
                    android:src="@drawable/loading" />

                <ImageView
                    android:id="@+id/image2"
                    android:layout_width="235dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/pad_10dp"
                    android:src="@drawable/loading" />

                <ImageView
                    android:id="@+id/image3"
                     android:layout_width="235dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/pad_10dp"
                    android:layout_weight="1.17"
                    android:src="@drawable/loading" />

                <ImageView
                    android:id="@+id/image4"
                     android:layout_width="235dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/pad_10dp"
                    android:layout_weight="2.25"
                    android:src="@drawable/loading" />

                <ImageView
                    android:id="@+id/image5"
                     android:layout_width="235dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/pad_10dp"
                    android:layout_weight="5.15"
                    android:src="@drawable/loading" />

                <ImageView
                    android:id="@+id/image6"
                    android:layout_width="235dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/pad_10dp"
                    android:src="@drawable/loading" />
            </LinearLayout>

        </HorizontalScrollView>

        <GridLayout
            android:layout_width="304dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/pad_10dp"
            android:layout_marginRight="@dimen/pad_10dp"
            android:alignmentMode="alignBounds"
            android:useDefaultMargins="true" >

            <Button
                android:id="@+id/desc"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="98dp"
                android:layout_height="34dp"
                android:layout_gravity="left|center_vertical"
                android:background="#fff"
                android:text="@string/desc"
                android:textAllCaps="false" />
            
			<View
		        android:layout_marginTop="4dp"
		        android:layout_marginRight="5dp"
                android:layout_width="2dp"
		        android:layout_height="25dp"
		        android:background="@color/main_gray_dk" />
			
            <Button
                android:id="@+id/proc"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="65dp"
                android:layout_height="34dp"
                android:layout_gravity="left|center_vertical"
                android:background="#fff"
                android:text="@string/proc" />

            <View
		        android:layout_marginTop="4dp"
		        android:layout_marginLeft="5dp"
		        android:layout_marginRight="5dp"
                android:layout_width="2dp"
		        android:layout_height="25dp"
		        android:background="@color/main_gray_dk" />
            
            <Button
                android:id="@+id/ingr"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="95dp"
                android:layout_height="34dp"
                android:layout_gravity="center"
                android:layout_weight="0.42"
                android:text="@string/ingr"
                android:background="#fff" />

        </GridLayout>

        <LinearLayout
            android:id="@+id/layout_desc"
            android:layout_width="match_parent"
            android:layout_height="214dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/pad_10dp" >

                <ImageView
                    android:id="@+id/user_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/pad_10dp"
                    android:layout_marginRight="@dimen/pad_30dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/dishName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/main_gray_dk"
                        android:textSize="@dimen/txt_14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/userName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/main_gray_lt"
                        android:textSize="@dimen/txt_12sp" />
                </LinearLayout>

                <Button
                    android:id="@+id/btn_like"
                    android:layout_width="45dp"
                    android:layout_height="30dp" />

                <ImageButton
                    android:id="@+id/btn_bookmark"
                    android:layout_width="45dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="@dimen/pad_10dp"
                    android:background="@drawable/btn_bookmark"
                    android:scaleType="fitXY" />
            </LinearLayout>

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider"
                android:background="@color/gray_light" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="302dp"
                android:fadeScrollbars="false"
                android:maxLines="15"
                android:padding="@dimen/pad_10dp"
                android:scrollbars="vertical"
                android:textColor="@color/main_gray_dk"
                android:textSize="@dimen/txt_13sp" />
        </LinearLayout>

       <!-- <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="52dp"
            android:orientation="horizontal" >

             <ImageButton
                android:id="@+id/btn_like"
                android:layout_width="48dp"
                android:layout_height="52dp"
                android:layout_marginRight="@dimen/pad_10dp"
                android:background="@drawable/like_button"
                android:scaleType="fitXY" />

            
                <ImageButton
	            android:id="@+id/btn_comment"
	            android:layout_width="48dp"
	            android:layout_height="52dp"
	            android:layout_marginRight="@dimen/pad_10dp"
	            android:background="@drawable/comment1"
	            android:scaleType="fitXY" />
            

        </LinearLayout>
-->
    </LinearLayout>

</ScrollView>
